Kubernets_Files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app # Make sure this matches the label below in the template.metadata.labels
  template:
    metadata:
      labels:
        app: flask-app # Make sure this matches the label above in the spec.selector.matchLabels
    spec:
      containers:
        - name: flask-app
          image: <ECR_REPO_IMAGE> # Replace <<ECR_REPO_IMAGE>> with the actual repo with tag name
          ports:
            - containerPort: 5000
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 5000
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 5000
          #   initialDelaySeconds: 15
          #   periodSeconds: 5
